force-app/main/default/objects/Paciente__c/fields/Estatura__c.field-meta.xml
<CustomField>
    <fullName>Estatura__c</fullName>
    <label>Estatura</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>