force-app/main/default/objects/Paciente__c/fields/Nombre__c.field-meta.xml
<CustomField>
    <fullName>Nombre__c</fullName>
    <label>Nombre</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>