force-app/main/default/objects/Paciente__c/fields/Peso__c.field-meta.xml
<CustomField>
    <fullName>Peso__c</fullName>
    <label>Peso</label>
    <length>3</length>
    <type>Text</type>
</CustomField>