force-app/main/default/objects/Paciente__c/fields/Primer_apellido__c.field-meta.xml
<CustomField>
    <fullName>Primer_apellido__c</fullName>
    <label>Primer apellido</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>